diesel_compile_tests/tests/fail/pg_on_conflict_requires_valid_conflict_target.stderr
error[E0271]: type mismatch resolving `<id as Column>::Table == table`
   --> tests/fail/pg_on_conflict_requires_valid_conflict_target.rs:41:22
    |
 LL |         .on_conflict(posts::id);
    |          ----------- ^^^^^^^^^ type mismatch resolving `<id as Column>::Table == table`
    |          |
    |          required by a bound introduced by this call
    |
note: expected this to be `users::table`
   --> tests/fail/pg_on_conflict_requires_valid_conflict_target.rs:14:9
    |
 LL |         id -> Integer,
    |         ^^
    = note: `posts::table` and `users::table` have similar names, but are actually distinct types
note: `posts::table` is defined in module `crate::posts` of the current crate
   --> tests/fail/pg_on_conflict_requires_valid_conflict_target.rs:12:1
    |
 LL | / table! {
 LL | |     posts {
 LL | |         id -> Integer,
 LL | |         title -> VarChar,
 LL | |     }
 LL | | }
    | |_^
note: `users::table` is defined in module `crate::users` of the current crate
   --> tests/fail/pg_on_conflict_requires_valid_conflict_target.rs:5:1
    |
  LL | / table! {
  LL | |     users {
  LL | |         id -> Integer,
  LL | |         name -> VarChar,
  LL | |     }
 LL | | }
    | |_^
note: required by a bound in `upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
   --> DIESEL/diesel/diesel/src/upsert/on_conflict_extension.rs
    |
LL |     pub fn on_conflict<Target>(
    |            ----------- required by a bound in this associated function
...
LL |         ConflictTarget<Target>: OnConflictTarget<T>,
    |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
    = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `lower_utils::lower<posts::columns::title>: Column` is not satisfied
   --> tests/fail/pg_on_conflict_requires_valid_conflict_target.rs:46:22
    |
 LL |         .on_conflict(lower(posts::title));
    |          ----------- ^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
help: the trait `Column` is not implemented for `lower_utils::lower<posts::columns::title>`
   --> tests/fail/pg_on_conflict_requires_valid_conflict_target.rs:23:1
    |
 LL | #[declare_sql_function]
    | ^^^^^^^^^^^^^^^^^^^^^^^
    = help: the following other types implement trait `Column`:
              pg::metadata_lookup::pg_namespace::columns::nspname
              pg::metadata_lookup::pg_namespace::columns::oid
              pg::metadata_lookup::pg_type::columns::oid
              pg::metadata_lookup::pg_type::columns::typarray
              pg::metadata_lookup::pg_type::columns::typname
              pg::metadata_lookup::pg_type::columns::typnamespace
              posts::columns::id
              posts::columns::title
            and N others
    = note: required for `ConflictTarget<lower<title>>` to implement `diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<users::table>`
note: required by a bound in `upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
   --> DIESEL/diesel/diesel/src/upsert/on_conflict_extension.rs
    |
LL |     pub fn on_conflict<Target>(
    |            ----------- required by a bound in this associated function
...
LL |         ConflictTarget<Target>: OnConflictTarget<T>,
    |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
 
        = note: this error originates in the attribute macro `declare_sql_function` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `&str: Column` is not satisfied
   --> tests/fail/pg_on_conflict_requires_valid_conflict_target.rs:51:22
    |
 LL |         .on_conflict("id");
    |          ----------- ^^^^ the trait `Column` is not implemented for `&str`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `Column`:
              pg::metadata_lookup::pg_namespace::columns::nspname
              pg::metadata_lookup::pg_namespace::columns::oid
              pg::metadata_lookup::pg_type::columns::oid
              pg::metadata_lookup::pg_type::columns::typarray
              pg::metadata_lookup::pg_type::columns::typname
              pg::metadata_lookup::pg_type::columns::typnamespace
              posts::columns::id
              posts::columns::title
            and N others
    = note: required for `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<&str>` to implement `diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<users::table>`
note: required by a bound in `upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
   --> DIESEL/diesel/diesel/src/upsert/on_conflict_extension.rs
    |
LL |     pub fn on_conflict<Target>(
    |            ----------- required by a bound in this associated function
...
LL |         ConflictTarget<Target>: OnConflictTarget<T>,
    |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
